ghc-6.2/hslibs/win32/Win32Dialogue_stub_ffi.h

extern void* prim_createDialog(HINSTANCE hInst,LPCTSTR lpTemp,HWND hWndParent,void * diaFun);
extern HWND access_prim_createDialog_res1(HsPtr);
extern int access_prim_createDialog_gc_failed(HsPtr);
extern void* access_prim_createDialog_gc_failstring(HsPtr);
extern void* prim_createDialogParam(HINSTANCE hInst,LPCTSTR lpTemp,HWND hWndParent,void * diaFun,LPARAM dwInit);
extern HWND access_prim_createDialogParam_res1(HsPtr);
extern int access_prim_createDialogParam_gc_failed(HsPtr);
extern void* access_prim_createDialogParam_gc_failstring(HsPtr);
extern void* prim_createDialogIndirect(HINSTANCE hInst,void * lpTemp,HWND hWndParent,void * diaFun);
extern HWND access_prim_createDialogIndirect_res1(HsPtr);
extern int access_prim_createDialogIndirect_gc_failed(HsPtr);
extern void* access_prim_createDialogIndirect_gc_failstring(HsPtr);
extern void* prim_createDialogIndirectParam(HINSTANCE hInst,void * lpTemp,HWND hWndParent,void * diaFun,LPARAM dwInit);
extern HWND access_prim_createDialogIndirectParam_res1(HsPtr);
extern int access_prim_createDialogIndirectParam_gc_failed(HsPtr);
extern void* access_prim_createDialogIndirectParam_gc_failstring(HsPtr);
extern LRESULT prim_defDlgProc(HWND arg1,DWORD arg2,WPARAM arg3,LPARAM arg4);
extern void* prim_endDialog(HWND arg1,int arg2);
extern BOOL access_prim_endDialog_res1(HsPtr);
extern int access_prim_endDialog_gc_failed(HsPtr);
extern void* access_prim_endDialog_gc_failstring(HsPtr);
extern LONG prim_getDialogBaseUnits();
extern void* prim_getDlgCtrlID(HWND arg1);
extern int access_prim_getDlgCtrlID_res1(HsPtr);
extern int access_prim_getDlgCtrlID_gc_failed(HsPtr);
extern void* access_prim_getDlgCtrlID_gc_failstring(HsPtr);
extern void* prim_getDlgItem(HWND arg1,int arg2);
extern HWND access_prim_getDlgItem_res1(HsPtr);
extern int access_prim_getDlgItem_gc_failed(HsPtr);
extern void* access_prim_getDlgItem_gc_failstring(HsPtr);
extern void* prim_getDlgItemInt(HWND arg1,int arg2,int arg3);
extern int access_prim_getDlgItemInt_res1(HsPtr);
extern int access_prim_getDlgItemInt_gc_failed(HsPtr);
extern void* access_prim_getDlgItemInt_gc_failstring(HsPtr);
extern void* prim_getDlgItemText(HWND arg1,int arg2,int arg3);
extern char * access_prim_getDlgItemText_gc_res2(HsPtr);
extern int access_prim_getDlgItemText_gc_failed(HsPtr);
extern void* access_prim_getDlgItemText_gc_failstring(HsPtr);
extern void* prim_getNextDlgGroupItem(HWND arg1,HWND arg2,BOOL arg3);
extern HWND access_prim_getNextDlgGroupItem_res1(HsPtr);
extern int access_prim_getNextDlgGroupItem_gc_failed(HsPtr);
extern void* access_prim_getNextDlgGroupItem_gc_failstring(HsPtr);