ghc-6.2/hslibs/win32/Win32Dialogue.hs


-- modeless dialogs
createDialog :: HINSTANCE -> DTemplate -> MbHWND -> DialogProc -> IO HWND
createDialog hInst lpTemp hWndParent gc_arg1 =
  (case hWndParent of {
      Nothing -> (return (nullHANDLE));
      (Just hWndParent) -> (return ((hWndParent)))
   }) >>= \ (hWndParent) ->
  (marshall_dialogProc_ gc_arg1) >>= \ (diaFun) ->
  prim_createDialog hInst lpTemp hWndParent diaFun
  >>= \ gc_result ->
  access_prim_createDialog_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createDialog_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createDialog_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_createDialog" prim_createDialog :: Addr -> Addr -> Addr -> FunPtr DialogProc -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialog_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialog_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialog_gc_failstring :: Addr -> IO (Addr)

createDialogParam :: HINSTANCE -> DTemplate -> MbHWND -> DialogProc -> LPARAM -> IO HWND
createDialogParam hInst lpTemp hWndParent gc_arg1 dwInit =
  (case hWndParent of {
      Nothing -> (return (nullHANDLE));
      (Just hWndParent) -> (return ((hWndParent)))
   }) >>= \ (hWndParent) ->
  (marshall_dialogProc_ gc_arg1) >>= \ (diaFun) ->
  prim_createDialogParam hInst lpTemp hWndParent diaFun dwInit
  >>= \ gc_result ->
  access_prim_createDialogParam_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createDialogParam_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createDialogParam_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_createDialogParam" prim_createDialogParam :: Addr -> Addr -> Addr -> FunPtr DialogProc -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogParam_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogParam_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogParam_gc_failstring :: Addr -> IO (Addr)

createDialogIndirect :: HINSTANCE -> DTemplateMem -> MbHWND -> DialogProc -> IO HWND
createDialogIndirect hInst lpTemp hWndParent gc_arg1 =
  (case hWndParent of {
      Nothing -> (return (nullHANDLE));
      (Just hWndParent) -> (return ((hWndParent)))
   }) >>= \ (hWndParent) ->
  (marshall_dialogProc_ gc_arg1) >>= \ (diaFun) ->
  prim_createDialogIndirect hInst lpTemp hWndParent diaFun
  >>= \ gc_result ->
  access_prim_createDialogIndirect_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createDialogIndirect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createDialogIndirect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_createDialogIndirect" prim_createDialogIndirect :: Addr -> Addr -> Addr -> FunPtr DialogProc -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogIndirect_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogIndirect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogIndirect_gc_failstring :: Addr -> IO (Addr)

createDialogIndirectParam :: HINSTANCE -> DTemplateMem -> MbHWND -> DialogProc -> LPARAM -> IO HWND
createDialogIndirectParam hInst lpTemp hWndParent gc_arg1 dwInit =
  (case hWndParent of {
      Nothing -> (return (nullHANDLE));
      (Just hWndParent) -> (return ((hWndParent)))
   }) >>= \ (hWndParent) ->
  (marshall_dialogProc_ gc_arg1) >>= \ (diaFun) ->
  prim_createDialogIndirectParam hInst lpTemp hWndParent diaFun dwInit
  >>= \ gc_result ->
  access_prim_createDialogIndirectParam_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createDialogIndirectParam_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createDialogIndirectParam_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_createDialogIndirectParam" prim_createDialogIndirectParam :: Addr -> Addr -> Addr -> FunPtr DialogProc -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogIndirectParam_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogIndirectParam_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_createDialogIndirectParam_gc_failstring :: Addr -> IO (Addr)

defDlgProc :: MbHWND -> WindowMessage -> WPARAM -> LPARAM -> IO LRESULT
defDlgProc arg1 arg2 arg3 arg4 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_defDlgProc arg1 arg2 arg3 arg4
  >>= \  res1  ->
  (return (res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_defDlgProc" prim_defDlgProc :: Addr -> Word32 -> Word32 -> Int32 -> IO (Int32)

endDialog :: HWND -> Int -> IO BOOL
endDialog arg1 arg2 =
  prim_endDialog arg1 arg2
  >>= \ gc_result ->
  access_prim_endDialog_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_endDialog_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_endDialog_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_bool_ res1) >>= \ gc_res1 ->
       (return (gc_res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_endDialog" prim_endDialog :: Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_endDialog_res1 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_endDialog_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_endDialog_gc_failstring :: Addr -> IO (Addr)

getDialogBaseUnits :: IO LONG
getDialogBaseUnits =
  prim_getDialogBaseUnits
  >>= \  res1  ->
  (return (res1))
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_getDialogBaseUnits" prim_getDialogBaseUnits :: IO (Int32)

getDlgCtrlID :: HWND -> IO Int
getDlgCtrlID arg1 =
  prim_getDlgCtrlID arg1
  >>= \ gc_result ->
  access_prim_getDlgCtrlID_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getDlgCtrlID_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDlgCtrlID_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_getDlgCtrlID" prim_getDlgCtrlID :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgCtrlID_res1 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgCtrlID_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgCtrlID_gc_failstring :: Addr -> IO (Addr)

getDlgItem :: HWND -> Int -> IO HWND
getDlgItem arg1 arg2 =
  prim_getDlgItem arg1 arg2
  >>= \ gc_result ->
  access_prim_getDlgItem_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getDlgItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDlgItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_getDlgItem" prim_getDlgItem :: Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItem_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItem_gc_failstring :: Addr -> IO (Addr)

getDlgItemInt :: HWND -> Int -> Bool -> IO Int
getDlgItemInt arg1 arg2 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  prim_getDlgItemInt arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_getDlgItemInt_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getDlgItemInt_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDlgItemInt_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_getDlgItemInt" prim_getDlgItemInt :: Addr -> Int -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItemInt_res1 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItemInt_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItemInt_gc_failstring :: Addr -> IO (Addr)

getDlgItemText :: HWND -> Int -> Int -> IO String
getDlgItemText arg1 arg2 arg3 =
  prim_getDlgItemText arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_getDlgItemText_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getDlgItemText_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDlgItemText_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_string_ gc_res2) >>= \ gc_res1 ->
       (return (gc_res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_getDlgItemText" prim_getDlgItemText :: Addr -> Int -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItemText_gc_res2 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItemText_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getDlgItemText_gc_failstring :: Addr -> IO (Addr)

getNextDlgGroupItem :: HWND -> HWND -> BOOL -> IO HWND
getNextDlgGroupItem arg1 arg2 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  prim_getNextDlgGroupItem arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_getNextDlgGroupItem_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getNextDlgGroupItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getNextDlgGroupItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_getNextDlgGroupItem" prim_getNextDlgGroupItem :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getNextDlgGroupItem_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getNextDlgGroupItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getNextDlgGroupItem_gc_failstring :: Addr -> IO (Addr)
